--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -8,6 +8,15 @@ header {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
+footer {
+    text-align: center;
+    font-size: xx-large;
+    background-color: darkslateblue;
+    color: ghostwhite;
+    padding-top: 1%; padding-bottom: 1%;
+    padding-bottom: 50px;
+}
+
 *{
     outline: black solid 1px;
 }
@@ -17,7 +26,9 @@ header {
 }
 
 #submission {
+    background-color: rgb(216, 216, 216);
 }
+
 #weather-information {
     padding-top: 2%; padding-bottom: 10%;
 }
