--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -42,7 +42,11 @@ footer {
 
 .col-2 {
     font-size: x-small;
+    font-weight: bolder;
     margin-bottom: 2%;
+    margin-right: 1%;
+    background-color: rgb(35, 81, 216);
+    opacity: .85;
 }
 
 #submission {
