--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -19,6 +19,7 @@ footer {
 
 .green {
     background-color: green;
+    color: whitesmoke;
 }
 
 .yellow {
@@ -34,6 +35,7 @@ footer {
 
 .purple {
     background-color: purple;
+    color: whitesmoke;
 }
 
 #forecast {
@@ -43,6 +45,7 @@ footer {
 .col-2 {
     font-size: x-small;
     font-weight: bolder;
+    color: whitesmoke;
     margin-bottom: 2%;
     margin-right: 1%;
     background-color: rgb(35, 81, 216);
