--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -52,6 +52,18 @@ footer {
     opacity: .85;
 }
 
+.col-1 {
+    margin-bottom: 2%;
+    margin-right: 1%;
+    margin-left: 1%;
+    background-color: rgb(35, 81, 216);
+    opacity: .85;
+    color: whitesmoke;
+    writing-mode: vertical-rl;
+    text-orientation: upright;
+    font-weight: bolder;
+}
+
 #submission {
     background-color: rgb(216, 216, 216);
 }
